--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@netlify/plugin-nextjs": "^5.11.6",
         "@types/nodemailer": "^6.4.17",
         "firebase": "^10.7.1",
+        "framer-motion": "^12.23.6",
         "next": "15.4.2",
         "nodemailer": "^7.0.5",
         "react": "19.1.0",
