--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         "start": "next start",
         "lint": "next lint"
     },
+    "engines": {
+        "node": "18.x"
+    },
     "dependencies": {
         "@heroicons/react": "^2.2.0",
         "@netlify/plugin-nextjs": "^5.11.6",
