--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "baseUrl": "src",
     "paths": {
       "@/components/*": ["components/*"],
-      "@/data/*": ["data/*"]
+      "@/data/*": ["data/*"],
+      "@/firebase": ["firebase.ts"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
