--- a/env.example
+++ b/env.example
@@ -2,6 +2,7 @@
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-password
 ADMIN_EMAIL=shahzaibpc7d@gmail.com
+RESEND_API_KEY=your-resend-api-key
 
 # Firebase Configuration (if not already set)
 NEXT_PUBLIC_FIREBASE_API_KEY=your-firebase-api-key
